--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /.pnp
 .pnp.js
 .env
-.config.py
+/Users/huynhben/ai-betting-app/backend/config.py
 # testing
 /coverage
 /Users/huynhben/ai-betting-app/backend/.env
